--- a/app/src/main/res/layout/fragment_modificar.xml
+++ b/app/src/main/res/layout/fragment_modificar.xml
@@ -37,27 +37,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3"
-            app:layout_constraintVertical_bias="0.0">
-
-            <TextView
-                android:id="@+id/textView5"
-                style="@style/textoBlanco"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="ID" />
-
-            <EditText
-                android:id="@+id/editTextTextPersonName"
-                style="@style/textoBlanco"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="ID"
-                android:inputType="textPersonName"
-                android:minHeight="48dp"
-                android:textColor="@color/verdeSelec"
-                android:textColorHint="#65656565" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.417">
 
             <TextView
                 android:id="@+id/texApellido"
