--- a/app/src/main/res/layout/fragment_buscar.xml
+++ b/app/src/main/res/layout/fragment_buscar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".buscar">
+    tools:context=".Buscar">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -33,10 +33,10 @@
             android:text="buscar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextIdEmpleado" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/textIntroducirId"
             style="@style/textoBlanco"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -49,7 +49,7 @@
             app:layout_constraintVertical_bias="0.108" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName2"
+            android:id="@+id/editTextIdEmpleado"
             style="@style/textoBlanco"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -64,7 +64,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/textIntroducirId"
             tools:ignore="TouchTargetSizeCheck" />
 
         <Button
@@ -80,18 +80,26 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/informacionPorId"
-            android:layout_width="311dp"
-            android:layout_height="389dp"
+            android:id="@+id/textEmpleadoBuscar"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginTop="36dp"
             android:background="@drawable/cuadro_informacion"
-            android:elevation="50dp"
-            android:shadowColor="#FFFFFF"
-            android:shadowDx="50"
-            android:shadowDy="50"
             android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/botonAtrasInBuscar"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/botonBuscarId"
+            app:layout_constraintVertical_bias="0.0"
+            android:fontFamily="@font/michroma"
+            android:gravity="center_horizontal"
+            android:paddingStart="10dp"
+            android:paddingTop="40dp"
+            android:paddingEnd="10dp"
+            android:paddingRight="10dp"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="20dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
