--- a/app/src/main/res/layout/fragment_ver_todos.xml
+++ b/app/src/main/res/layout/fragment_ver_todos.xml
@@ -51,7 +51,7 @@
                     android:paddingEnd="10dp"
                     android:paddingRight="10dp"
                     android:textAlignment="center"
-                    android:textColor="#000000"
+                    android:textColor="#FFFFFF"
                     android:textSize="20sp" />
             </LinearLayout>
         </ScrollView>
