--- a/app/src/main/res/layout/fragment_ver_uno.xml
+++ b/app/src/main/res/layout/fragment_ver_uno.xml
@@ -30,13 +30,13 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/cuadro_informacion"
             android:fontFamily="@font/michroma"
-            android:gravity="top"
+            android:gravity="center_horizontal"
             android:paddingStart="10dp"
             android:paddingTop="40dp"
             android:paddingEnd="10dp"
             android:paddingRight="10dp"
             android:textAlignment="center"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:textSize="20dp"
             app:layout_constraintBottom_toTopOf="@+id/botonVolverInVerUno"
             app:layout_constraintEnd_toEndOf="parent"
