--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -35,13 +35,14 @@
                 android:text="Apellido" />
 
             <EditText
-                android:id="@+id/editTextApellidoInAdd"
+                android:id="@+id/editTextApellidoInModificar"
                 style="@style/textoBlanco"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Apellido"
                 android:inputType="textPersonName"
+                android:nextFocusDown="@id/spinner"
                 android:paddingBottom="15dp"
                 android:textColor="@color/verdeSelec"
                 android:textColorHint="#65656565" />
@@ -59,6 +60,8 @@
                 style="@style/spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:minHeight="48dp"
                 android:scrollbarStyle="outsideInset" />
 
@@ -71,7 +74,7 @@
                 android:text="Salario" />
 
             <EditText
-                android:id="@+id/editTextSalarioInAdd"
+                android:id="@+id/editTextSalarioInModificar"
                 style="@style/textoBlanco"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
