--- a/app/src/main/res/layout/fragment_modificar.xml
+++ b/app/src/main/res/layout/fragment_modificar.xml
@@ -28,17 +28,44 @@
         <LinearLayout
             android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
-            android:layout_height="359dp"
+            android:layout_height="400dp"
             android:layout_marginTop="1dp"
             android:orientation="vertical"
             android:paddingLeft="25dp"
             android:paddingRight="25dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.417">
+            app:layout_constraintVertical_bias="0.452">
+
+            <TextView
+                android:id="@+id/textView2"
+                style="@style/textoBlanco"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ID" />
+
+            <EditText
+                android:id="@+id/editTextIdInModificar"
+                style="@style/textoBlanco"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:ems="10"
+                android:hint="ID"
+                android:inputType="number"
+                android:minHeight="48dp"
+                android:textColor="@color/verdeSelec"
+                android:textColorHint="#65656565" />
+
+            <Button
+                android:id="@+id/botonBuscarInModificar"
+                style="@style/botonVerde"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:text="Buscar" />
 
             <TextView
                 android:id="@+id/texApellido"
@@ -49,13 +76,15 @@
                 android:text="Apellido" />
 
             <EditText
-                android:id="@+id/editTextApellidoInAdd"
+                android:id="@+id/editTextApellidoInModificar"
                 style="@style/textoBlanco"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:enabled="false"
+                android:focusable="auto"
                 android:hint="Apellido"
-                android:inputType="textPersonName"
+                android:inputType="text"
                 android:paddingBottom="15dp"
                 android:textColor="@color/verdeSelec"
                 android:textColorHint="#65656565" />
@@ -68,50 +97,56 @@
                 android:paddingTop="15dp"
                 android:text="Departamento" />
 
-            <EditText
-                android:id="@+id/editTextDepartamentoInAdd"
-                style="@style/textoBlanco"
+            <Spinner
+                android:id="@+id/spinner2"
+                style="@style/spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Departamento"
-                android:inputType="textPersonName"
-                android:paddingBottom="15dp"
-                android:textColor="@color/verdeSelec"
-                android:textColorHint="#65656565" />
+                android:background="@color/backNight"
+                android:clickable="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:minHeight="48dp"
+                android:scrollbarStyle="outsideInset"
+                android:spinnerMode="dropdown" />
 
             <TextView
                 android:id="@+id/textView9"
                 style="@style/textoBlanco"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
                 android:paddingTop="15dp"
                 android:text="Salario" />
 
             <EditText
-                android:id="@+id/editTextSalarioInAdd"
+                android:id="@+id/editTextSalarioInModificar"
                 style="@style/textoBlanco"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:enabled="false"
+                android:focusable="auto"
                 android:hint="Salario"
-                android:inputType="number|numberDecimal"
+                android:inputType="numberDecimal"
                 android:paddingBottom="15dp"
                 android:textColor="@color/verdeSelec"
                 android:textColorHint="#65656565" />
         </LinearLayout>
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/botonModificarInModificar"
             style="@style/botonVerde"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Añadir"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="28dp"
+            android:text="Modificar"
+            app:layout_constraintBottom_toTopOf="@+id/botonVolverInModificar"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.697" />
 
         <Button
             android:id="@+id/botonVolverInModificar"
